Imporei fontes para a primeria div

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-            <div class="header-msg"><p>FRETE GRÁTIS ACIMA DE 180,00</p></div>
+            <div class="header-msg"><p>frete grátis acima de R$ 150,00</p></div>
     <header>
 
         <a href="" class="login">Login , Cadastre se</a>
