Corpo do Site + Botão do whatssapp

--- a/index.html
+++ b/index.html
@@ -73,7 +73,61 @@
 
         </section>
 
+        <section class="information">
+
+            <div class="information-content">
+                <h3>FRETE GRÁTIS</h3>
+                <p>NAS COMPRAS ACIMA DE 150,00 PARA TODAS REGIÕES</p>
+            </div>
+
+            <div class="information-content">
+                <h3>CUPOM DE DESCONTO</h3>
+                <p>"bemvinda10" NAS PRIMEIRAS COMPRAS 10%</p>
+            </div>
+
+            <div class="information-content">
+                <h3>GARANTIA VITALICIA</h3>
+                <p>GARANTIA VITALICIA PARA TODAS A PEÇAS DE PRATA 925</p>
+            </div>
+
+        </section>
+
+        <div class="product">
+
+            <div class="product-container">
+                <img src="" alt="">
+                <h4>PREÇO</h4>
+                <p>DESCRIÇÃO</p>
+            </div>
+
+            <div class="product-container">
+                <img src="" alt="">
+                <h4>PREÇO</h4>
+                <p>DESCRIÇÃO</p>
+            </div>
+
+            <div class="product-container">
+                <img src="" alt="">
+                <h4>PREÇO</h4>
+                <p>DESCRIÇÃO</p>
+            </div>
+
+            <div class="product-container">
+                <img src="" alt="">
+                <h4>PREÇO</h4>
+                <p>DESCRIÇÃO</p>
+            </div>
+
+        </div>
+
     </main>
+
+    <div class="whatsapp-button">
+        <a href="https://api.whatsapp.com/send?phone=5571982771685" target="_blank">
+          <img src="img/pngwing.com.png" alt="WhatsApp">
+        </a>
+      </div>
+      
 
 </body>
 </html>
