Adição de imagens e produtos

--- a/index.html
+++ b/index.html
@@ -95,26 +95,26 @@
         <div class="product">
 
             <div class="product-container">
-                <img src="" alt="">
-                <h4>PREÇO</h4>
+                <img src="img/Foto-mostruario-1.jpeg" alt="">
+                <h4>R$ 280,00</h4>
                 <p>DESCRIÇÃO</p>
             </div>
 
             <div class="product-container">
-                <img src="" alt="">
-                <h4>PREÇO</h4>
+                <img src="img/Foto-mostruario-2.jpeg" alt="">
+                <h4>R$ 156,00</h4>
                 <p>DESCRIÇÃO</p>
             </div>
 
             <div class="product-container">
-                <img src="" alt="">
-                <h4>PREÇO</h4>
+                <img src="img/Foto-mostruario-3.jpeg" alt="">
+                <h4>R$ 120,00</h4>
                 <p>DESCRIÇÃO</p>
             </div>
 
             <div class="product-container">
-                <img src="" alt="">
-                <h4>PREÇO</h4>
+                <img src="img/Foto-mostruario-4.jpeg" alt="">
+                <h4>R$ 99,99</h4>
                 <p>DESCRIÇÃO</p>
             </div>
 
