botão de compra e mais estilos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="header-msg"><p>frete grátis acima de R$ 150,00</p></div>
     <header>
 
-        <a href="" class="login">Login , Cadastre se</a>
+        <a href="" class="login">Login  Cadastre se</a>
 
         <h1>NOLLA</h1>
 
@@ -98,24 +98,28 @@
                 <img src="img/Foto-mostruario-1.jpeg" alt="">
                 <h4>R$ 280,00</h4>
                 <p>DESCRIÇÃO</p>
+                <button>Compre</button>
             </div>
 
             <div class="product-container">
                 <img src="img/Foto-mostruario-2.jpeg" alt="">
                 <h4>R$ 156,00</h4>
                 <p>DESCRIÇÃO</p>
+                <button>Compre</button>
             </div>
 
             <div class="product-container">
                 <img src="img/Foto-mostruario-3.jpeg" alt="">
                 <h4>R$ 120,00</h4>
                 <p>DESCRIÇÃO</p>
+                <button>Compre</button>
             </div>
 
             <div class="product-container">
                 <img src="img/Foto-mostruario-4.jpeg" alt="">
                 <h4>R$ 99,99</h4>
                 <p>DESCRIÇÃO</p>
+                <button>Compre</button>
             </div>
 
         </div>
@@ -128,6 +132,6 @@
         </a>
       </div>
       
-
+      
 </body>
 </html>
