--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>N'olla Store</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <script src="JS/script.js" defer></script>
 </head>
 <body>
